--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="imagens">
-      <img src="horta.jpg" alt="Hortaliças" />
+      <img src="horta.png" alt="Hortaliças" />
     </div>
   </main>
 
