--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="menu-icon">&#9776;</div>
     <div class="logo">
-      <img src="logo.png" alt="Logo do Mercado" />
+      <img img="logo.png" alt="Logo do Mercado" />
     </div>
   </header>
 
