--- a/index.html
+++ b/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercado Conectado</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <div class="menu-icon">&#9776;</div>
-    <div class="logo">
-      <img img="logo.png" alt="Logo do Mercado" />
-    </div>
+    <div class="menu">&#9776;</div>
+    <img class="logo" src="logo.png" alt="Logo Mercado Conectado">
   </header>
 
   <main>
     <h1>A proximidade entre o campo e a cidade em cada produto.</h1>
 
-    <h2 class="subtitulo-verde">
-      Compre produtos frescos e artesanais direto do campo para sua casa!
-    </h2>
+    <h2 class="destaque">Compre produtos frescos e artesanais direto do campo para sua casa!</h2>
 
-    <section class="descricao">
+    <section class="texto">
       <p>
-        O Mercado Conectado nasceu com um propósito claro: encurtar a distância entre o produtor rural e o consumidor urbano...
-        <!-- resto do texto aqui, copie da imagem -->
+        O Mercado Conectado nasceu com um propósito claro: encurtar a distância entre o produtor rural e o consumidor urbano.
+        Nosso objetivo é oferecer produtos frescos, autênticos e artesanais, diretamente de quem produz, sem intermediários.
       </p>
       <p>
+        Acreditamos no poder da agricultura local, no valor do trabalho artesanal e na importância de um consumo mais consciente.
+        Ao escolher nossos produtos, você apoia pequenos produtores, fortalece a economia local e leva pra casa qualidade e confiança.
+        Somos mais do que uma loja: somos uma rede de pessoas que acreditam em um futuro mais justo, saudável e conectado com a terra.
+      </p>
+
+      <p>
         Junte-se a esse movimento! 🌱<br>
-        Se você busca alimentos frescos, produtos artesanais e peças feitas com dedicação...
+        Se você busca alimentos frescos, produtos artesanais e peças feitas com dedicação, o Mercado Conectado é o seu lugar.
+        Faça parte de uma rede que valoriza o que é local, saudável e verdadeiro.
+      </p>
+
+      <p>
+        E se você é produtor rural, artesão ou faz produtos com as próprias mãos, aqui também é o seu espaço.
+        Cadastre-se e venda diretamente para pessoas que valorizam o seu trabalho.<br>
+        👉Quer vender? Entre em contato com a gente e venha fazer parte dessa comunidade que acredita no valor da produção local.
       </p>
     </section>
 
     <div class="botoes">
-      <button class="botao-verde">QUERO COMPRAR</button>
-      <button class="botao-roxo">QUERO VENDER</button>
+      <button class="botao comprar">QUERO COMPRAR</button>
+      <button class="botao vender">QUERO VENDER</button>
     </div>
 
-    <div class="imagens">
-      <img img="horta.png" alt="Hortaliças" />
+    <div class="imagem-produtos">
+      <img img="horta.png" alt="Produtos Frescos">
     </div>
   </main>
 
-  <script img="horta.png"></script>
+  <script src="main.js"></script>
 </body>
 </html>
