--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="imagem-produtos">
-      <img img="horta.png" alt="Produtos Frescos">
+      <img src="img/horta.png" alt="Produtos Frescos">
     </div>
   </main>
 
