--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="menu">&#9776;</div>
-    <img class="logo" src="logo.png" alt="Logo Mercado Conectado">
+    <img class="logo" src="img/logo.png" alt="Logo Mercado Conectado">
   </header>
 
   <main>
