--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
   <header>
     <div class="menu">&#9776;</div>
     <img class="logo" src="img/logo.png" alt="Logo Mercado Conectado">
+      <h1>A proximidade entre o campo e a cidade em cada produto.</h1>
   </header>
 
   <main>
-    <h1>A proximidade entre o campo e a cidade em cada produto.</h1>
+  
 
     <h2 class="destaque">Compre produtos frescos e artesanais direto do campo para sua casa!</h2>
 
     <section class="texto">
       <p>
+  font-size: 20px;
+  text-align: center;
+  margin-top: 1rem;
+  font-weight: bold;
+  color: #1f2a15;
+}
+
+.destaque {
+  color: #081d00;
         O Mercado Conectado nasceu com um propósito claro: encurtar a distância entre o produtor rural e o consumidor urbano.
         Nosso objetivo é oferecer produtos frescos, autênticos e artesanais, diretamente de quem produz, sem intermediários.
       </p>
