--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="menu-lateral" id="menuLateral">
+  <button class="fechar-menu" id="fecharMenu">✖</button>
+  <ul>
+    <li><a href="#">Página inicial</a></li>
+    <li><a href="#">Receitas</a></li>
+    <li><a href="#">Produtos</a>
+      <ul class="sub-menu">
+        <li>Artesanais</li>
+        <li>Ofertas</li>
+        <li>Hortifruti</li>
+        <li>Queijos e Laticínios</li>
+        <li>Outros</li>
+      </ul>
+    </li>
+    <li><a href="#">Meus Pedidos</a></li>
+    <li><a href="#">Meu Perfil</a></li>
+    <li><a href="#">Favoritos</a></li>
+    <li><a href="#">Contato</a></li>
+    <li><a href="#">Sobre</a></li>
+    <li><a href="#">Sair</a></li>
+  </ul>
+</div>
   <header>
     <div class="menu">&#9776;</div>
       <h1>A proximidade entre o campo e a cidade em cada produto.</h1>
@@ -55,4 +77,5 @@
 
   <script src="main.js"></script>
 </body>
+
 </html>
