--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -7,62 +8,43 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="menu-lateral" id="menuLateral">
-  <button class="fechar-menu" id="fecharMenu">✖</button>
-  <ul>
-    <li><a href="#">Página inicial</a></li>
-    <li><a href="#">Receitas</a></li>
-    <li><a href="#">Produtos</a>
-      <ul class="sub-menu">
-        <li>Artesanais</li>
-        <li>Ofertas</li>
-        <li>Hortifruti</li>
-        <li>Queijos e Laticínios</li>
-        <li>Outros</li>
-      </ul>
-    </li>
-    <li><a href="#">Meus Pedidos</a></li>
-    <li><a href="#">Meu Perfil</a></li>
-    <li><a href="#">Favoritos</a></li>
-    <li><a href="#">Contato</a></li>
-    <li><a href="#">Sobre</a></li>
-    <li><a href="#">Sair</a></li>
-  </ul>
-</div>
+  <div class="menu-lateral" id="menuLateral">
+    <button class="fechar-menu" id="fecharMenu">✖</button>
+    <ul>
+      <li><a href="#">Página inicial</a></li>
+      <li><a href="#">Receitas</a></li>
+      <li><a href="#">Produtos</a>
+        <ul class="sub-menu">
+          <li>Artesanais</li>
+          <li>Ofertas</li>
+          <li>Hortifruti</li>
+          <li>Queijos e Laticínios</li>
+          <li>Outros</li>
+        </ul>
+      </li>
+      <li><a href="#">Meus Pedidos</a></li>
+      <li><a href="#">Meu Perfil</a></li>
+      <li><a href="#">Favoritos</a></li>
+      <li><a href="#">Contato</a></li>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Sair</a></li>
+    </ul>
+  </div>
+
   <header>
     <div class="menu">&#9776;</div>
-      <h1>A proximidade entre o campo e a cidade em cada produto.</h1>
-       <img class="logo" src="img/logo.png" alt="Logo Mercado Conectado">
+    <h1>A proximidade entre o campo e a cidade em cada produto.</h1>
+    <img class="logo" src="img/logo.png" alt="Logo Mercado Conectado">
   </header>
 
   <main>
-  
-
     <h2 class="destaque">Compre produtos frescos e artesanais direto do campo para sua casa!</h2>
 
     <section class="texto">
-      <p>
-  
-        O Mercado Conectado nasceu com um propósito claro: encurtar a distância entre o produtor rural e o consumidor urbano.
-        Nosso objetivo é oferecer produtos frescos, autênticos e artesanais, diretamente de quem produz, sem intermediários.
-      </p>
-      <p>
-        Acreditamos no poder da agricultura local, no valor do trabalho artesanal e na importância de um consumo mais consciente.
-        Ao escolher nossos produtos, você apoia pequenos produtores, fortalece a economia local e leva pra casa qualidade e confiança.
-        Somos mais do que uma loja: somos uma rede de pessoas que acreditam em um futuro mais justo, saudável e conectado com a terra.
-      </p>
-
-      <p>
-        Junte-se a esse movimento! 🌱<br>
-        Se você busca alimentos frescos, produtos artesanais e peças feitas com dedicação, o Mercado Conectado é o seu lugar.
-        Faça parte de uma rede que valoriza o que é local, saudável e verdadeiro.
-      </p>
-
-      <p>
-        E se você é produtor rural, artesão ou faz produtos com as próprias mãos, aqui também é o seu espaço.
-        Cadastre-se e venda diretamente para pessoas que valorizam o seu trabalho.<br>
-        👉Quer vender? Entre em contato com a gente e venha fazer parte dessa comunidade que acredita no valor da produção local.
-      </p>
+      <p>O Mercado Conectado nasceu com um propósito claro: encurtar a distância entre o produtor rural e o consumidor urbano. Nosso objetivo é oferecer produtos frescos, autênticos e artesanais, diretamente de quem produz, sem intermediários.</p>
+      <p>Acreditamos no poder da agricultura local, no valor do trabalho artesanal e na importância de um consumo mais consciente. Ao escolher nossos produtos, você apoia pequenos produtores, fortalece a economia local e leva pra casa qualidade e confiança. Somos mais do que uma loja: somos uma rede de pessoas que acreditam em um futuro mais justo, saudável e conectado com a terra.</p>
+      <p>Junte-se a esse movimento! 🌱<br> Se você busca alimentos frescos, produtos artesanais e peças feitas com dedicação, o Mercado Conectado é o seu lugar. Faça parte de uma rede que valoriza o que é local, saudável e verdadeiro.</p>
+      <p>E se você é produtor rural, artesão ou faz produtos com as próprias mãos, aqui também é o seu espaço. Cadastre-se e venda diretamente para pessoas que valorizam o seu trabalho.<br> 👉Quer vender? Entre em contato com a gente e venha fazer parte dessa comunidade que acredita no valor da produção local.</p>
     </section>
 
     <div class="botoes">
@@ -77,5 +59,4 @@
 
   <script src="main.js"></script>
 </body>
-
 </html>
