--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -27,7 +26,7 @@
       <li><a href="#">Favoritos</a></li>
       <li><a href="#">Contato</a></li>
       <li><a href="#">Sobre</a></li>
-      <li><a href="#">Sair</a></li>
+      <li><a href="#" onclick="logout()">Sair</a></li>
     </ul>
   </div>
 
@@ -58,5 +57,14 @@
   </main>
 
   <script src="main.js"></script>
+  <script>
+    function logout() {
+      // Limpa dados de login se houver
+      localStorage.removeItem("usuarioLogado");
+
+      // Redireciona para a página inicial (ajuste conforme necessário)
+      window.location.href = "/seu-repo/index.html";
+    }
+  </script>
 </body>
 </html>
